Fixed letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body{
   color: white;
   font-size: 22px;
   line-height: normal;
-  letter-spacing: -.03em;
   overflow: hidden;
   background-image: url();
 }
